Filter on validation date
